<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_test</name>
  <version>0.0.0</version>
  <description>test Image/Message filter</description>
  <maintainer email="han.yin@intel.com">hanyin</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_trasnport</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>image_trasnport</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
